# boscaceoil

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  workbench.build.jsonc
src/: MMLSong.as  Main.as  Midiexporter.as  arrangement.cc  arrangement.h  arrangementclass.as  arrangementclass.cc  bar.cc  bar.h  barclass.as  control.as  control.cc  drumkit.cc  drumkit.h  drumkitclass.as  gfx.as  gfx.cc  guibutton.as  guibutton.cc  guibutton.h  guiclass.as  help.as  help.cc  help.h  instrument.cc  instrument.h  instrumentclass.as  keypoll.as  list.cc  list.h  listclass.as  midicontrol.as  musicphrase.cc  musicphrase.h  musicphraseclass.as  palette.cc  palette.h  paletteclass.as  rect.cc  rect.h  (+6 more)
src/includes/: input.as  logic.as  render.as
